<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    style="@style/MatchParentStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/drawer_menu_left_padding"
    android:paddingRight="@dimen/drawer_menu_left_padding"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    >

    <com.artjoker.core.views.ArtJokerTextView
        style="@style/SanSerifLight"
        android:id="@+id/tv_change_pass_title"
        android:text="@string/change_password_title"
        android:layout_marginTop="@dimen/change_pass_top_margin"
        android:layout_marginBottom="@dimen/change_pass_top_margin"
        android:textColor="@color/categories_text_color"
        android:textSize="@dimen/font_size_7pt" />

    <com.artjoker.core.views.ArtJokerTextView
        style="@style/SanSerifLight"
        android:id="@+id/tv_descr_change_pass"
        android:text="@string/change_password_description"
        android:layout_marginBottom="@dimen/change_pass_desc_bot_margin"
        android:textColor="@color/location_and_date_text_color"
        android:textSize="@dimen/font_size_5pt" />

    <com.artjoker.core.views.ArtJokerTextView
        style="@style/SanSerifLight"
        android:id="@+id/tv_old_pass_title"
        android:text="@string/old_password_title"
        android:paddingLeft="@dimen/change_pass_title_padding"
        android:textColor="@color/categories_text_color"
        android:textSize="@dimen/font_size_5pt" />

    <com.artjoker.core.views.ArtJokerEditText
        style="@style/EditTextStyle"
        custom:errorMessageIfLenghtLessThen="@string/password_error"
        custom:showErrorMessageIfLenghtLessThen="@integer/password_length"
        android:id="@+id/et_old_pass"
        android:textSize="@dimen/font_size_5pt"
        android:layout_marginBottom="@dimen/change_pass_old_pass_bot_margin"
        android:inputType="textPassword" />

    <com.artjoker.core.views.ArtJokerTextView
        style="@style/SanSerifLight"
        android:id="@+id/tv_new_pass_title"
        android:text="@string/new_password_title"
        android:paddingLeft="@dimen/change_pass_title_padding"
        android:textColor="@color/categories_text_color"
        android:textSize="@dimen/font_size_5pt" />

    <com.artjoker.core.views.ArtJokerEditText
        style="@style/EditTextStyle"
        android:id="@+id/et_new_pass"
        android:textSize="@dimen/font_size_5pt"
        custom:errorMessageIfLenghtLessThen="@string/password_error"
        custom:showErrorMessageIfLenghtLessThen="@integer/password_length"
        android:inputType="textPassword" />

    <com.artjoker.core.views.ArtJokerButton

        android:id="@+id/button_commit_pass"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_title"
        style="@style/LoginButton"
        android:layout_width="wrap_content"
        android:background="@color/green_header"
        android:paddingLeft="@dimen/change_pass_buttom_change_pass_padding"
        android:paddingRight="@dimen/change_pass_buttom_change_pass_padding"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/change_pass_button_change_pass_top_margin"
        android:textSize="@dimen/font_size_6pt" />
</LinearLayout>
</ScrollView>